Multinode now can be launched from the dashboard and communicates. Events TBD.

--- a/dashboard/wizards-tome.html
+++ b/dashboard/wizards-tome.html
@@ -18,7 +18,7 @@
 					<div class="form-group"><span>Name</span><input id="leftTeamName"			class="form-field" type="text" placeholder="Team Name"></div>
 					<div class="form-group"><span>Web Color</span><input id="leftInColor"		class="form-field" type="text" placeholder="Website Color"></div>
 					<div class="form-group"><span>Out Color</span><input id="leftOutColor"		class="form-field" type="text" placeholder="Display Color"></div>
-					<div class="form-group"><span>Multi</span><input id="leftMultilink"			class="form-field" type="text" placeholder="Multi Link"></div>
+					<div class="form-group"><span>Multi</span><input id="leftMultiLink"			class="form-field" type="text" placeholder="Multi Link"></div>
 					<br>Top Player
 					<div class="form-group"><span>Name</span><input id="topLeftName"			class="form-field" type="text" placeholder="Top Left Name"></div>
 					<div class="form-group"><span>Pronouns</span><input id="topLeftPronouns"	class="form-field" type="text" placeholder="Top Left Pronouns"></div>
@@ -31,7 +31,7 @@
 					<div class="form-group"><span>Name</span><input id="rightTeamName"			class="form-field" type="text" placeholder="Team Name"></div>
 					<div class="form-group"><span>Web Color</span><input id="rightInColor"		class="form-field" type="text" placeholder="Website Color"></div>
 					<div class="form-group"><span>Out Color</span><input id="rightOutColor"		class="form-field" type="text" placeholder="Display Color"></div>
-					<div class="form-group"><span>Multi</span><input id="rightMultilink"		class="form-field" type="text" placeholder="Multi Link"></div>
+					<div class="form-group"><span>Multi</span><input id="rightMultiLink"		class="form-field" type="text" placeholder="Multi Link"></div>
 					<br>Top Player
 					<div class="form-group"><span>Name</span><input id="topRightName"			class="form-field" type="text" placeholder="Top Right Name"></div>
 					<div class="form-group"><span>Pronouns</span><input id="topRightPronouns"	class="form-field" type="text" placeholder="Top Right Pronouns"></div>
@@ -85,6 +85,7 @@
 		</div>
 		<button id="launchServerButton" onclick="launchServer()">Launch Server</button>
 		<button id="launchClientButton" onclick="launchClient()">Launch Client</button>
+		<button id="launchAutomarkerButton" onclick="launchAutomarker()">Launch Automarker</button>
 		<script src="./wizards-tome.js"></script>
 	</body>
 </html>
